[workspace]
members = [
    "pap-api",
    "pap-client",
    "pap-run",
    "pap-server",
]
resolver = "2"

[workspace.package]
license = "BSD-2-Clause"
readme = "README.md"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5.20", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["from_str"] }
env_logger = "0.11.5"
log = "0.4"
schemars = "1.0.0-alpha.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tarpc = { version = "0.35.0", features = ["full"] }
thiserror = "2"
tokio = { version = "^1.41", features = ["full", "rt-multi-thread"] }
