[package]
name = "pap-server"
version = "0.1.0"
edition = "2021"
license.workspace = true
readme.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
pap-api = { path = "../pap-api", features = ["serde_json", "sqlx"] }
tarpc = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = "0.3.31"

